edit data understanding

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -57,6 +57,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "98fe0286-04e4-468e-976e-e7d5281900ea",
+   "metadata": {},
+   "source": [
+    "The [data](https://insideairbnb.com/get-the-data/) has been extracted from Airbnb. Two datasets were used in this project:\n",
+    "1. listings.csv.gz: 3031 entries of unique listings. Each listing includes detailed information, including host information, price, availability, rooms, and reviews. This dataset will be trimmed to include only what will be listed in the recommendations.\n",
+    "2. reviews.csv.gz: 331718 entries of unique reviews. This dataset includes the following columns - listing_id, id, date, reviewer_id, reviewer_name, comments. The reviews are listed as comments, not numerical ratings. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "951cc418-bae0-4a7b-8cc5-c8096c171973",
+   "metadata": {},
+   "source": [
+    "First I will import all the necessary libraries for EDA, data cleaning and modeling."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "id": "be3aae36-20d4-4f6c-981c-da33b44eb611",
@@ -73,6 +91,14 @@
     "from surprise.prediction_algorithms import SVD\n",
     "from surprise.prediction_algorithms import KNNWithMeans, KNNBasic, KNNBaseline\n",
     "from surprise.model_selection import GridSearchCV"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3243b98-60dd-4402-9918-1b94c31ff0b7",
+   "metadata": {},
+   "source": [
+    "Next I will import each of the datasets, preview the first 5 rows of the data, and investigate an overview of the data to view the data types, columns, and number of nulls. I also will preview a full comment to determine how it can be utilized for machine learning. "
    ]
   },
   {
