markup for listings df in Data Cleaning

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -694,6 +694,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "391b2410-3b54-4f11-951a-4bd78052d0b7",
+   "metadata": {},
+   "source": [
+    "To prepare the data for machine learning, I will compute the following steps:\n",
+    "1. Select columns to use and clean each dataframe.\n",
+    "2. Use VADER SentimentIntensityAnalyzer to convert review comments to nuerical values (compound scores) in preparation for machine learning. Create a new column with these values.\n",
+    "3. Explore the statistical distribution of compound scores of the reviews."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d6d300b8-4afd-48b5-958a-de3e0f7a841b",
    "metadata": {},
    "source": [
@@ -709,9 +720,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b159cbbb-9d39-4787-8c97-7573f3641eb9",
+   "metadata": {},
+   "source": [
+    "I will create a new dataframe, `recommender_cols_df` that include only the columns I want to keep from `listings_df`. These columns are 'id', 'listing_url', 'name', 'description', 'picture_url', 'room_type', 'price'. `id` must be kept to link the listing from this dataframe to the listing id in `reviews_df`. The remaining columns are kept to to populate once the user is provided the 3 recommendations. For more information on the listing, they can click the URL link to visit the listing on Airbnb."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "ff5aab33-9cd2-4ad8-b015-da1aec6bcf0e",
+   "execution_count": 28,
+   "id": "ccb3b5a3-a88a-4190-a61c-d4ad6c0bf080",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -767,6 +786,12 @@
    "source": [
     "### Reviews DataFrame"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be144efb-2341-4292-8125-72eaf24e770d",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
