--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1078,11 +1078,13 @@
    "cell_type": "markdown",
    "id": "263a577e-a29f-4d12-b295-34426b86859b",
    "metadata": {},
-   "source": []
+   "source": [
+    "To create a recommender model, I must convert the review comments to numerical value. I will use the **VADER** (Valence Aware Dictionary and sEntiment Reasoner) SentimentIntensityAnalyzer. This is a pretrained lexicon and rule-based sentiment analysis tool. I chose this library due to its ease of use and because it does not require any training data. I will create a new column 'compound_scores' which the sentiment results of each comment. The **compound scores range from -1 (most negative) to 1 (most positive)**. **Neutral sentiments range from values greater than -0.05 to values less than 0.05**. These scores will be used to recommend listing to similar users."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "9e7c4c02-3bf4-412c-9146-dc8d0cb8e8fb",
    "metadata": {},
    "outputs": [],
@@ -1096,10 +1098,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "2f68509f-da66-4c3b-867e-54f6328139bf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>listing_id</th>\n",
+       "      <th>reviewer_id</th>\n",
+       "      <th>comments</th>\n",
+       "      <th>compound_scores</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>155305</td>\n",
+       "      <td>844309</td>\n",
+       "      <td>We had a wonderful time! The cottage was very ...</td>\n",
+       "      <td>0.8830</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>155305</td>\n",
+       "      <td>343443</td>\n",
+       "      <td>Place was great! Can't really speak to the ins...</td>\n",
+       "      <td>0.9954</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>155305</td>\n",
+       "      <td>1152025</td>\n",
+       "      <td>We had a great time!  The cabin was nice and a...</td>\n",
+       "      <td>0.9819</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>155305</td>\n",
+       "      <td>1245885</td>\n",
+       "      <td>Clean and comfortable room with everything you...</td>\n",
+       "      <td>0.9775</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>155305</td>\n",
+       "      <td>1891395</td>\n",
+       "      <td>The cabin was solid for an overnight stay. It ...</td>\n",
+       "      <td>0.8807</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   listing_id  reviewer_id                                           comments  \\\n",
+       "0      155305       844309  We had a wonderful time! The cottage was very ...   \n",
+       "1      155305       343443  Place was great! Can't really speak to the ins...   \n",
+       "2      155305      1152025  We had a great time!  The cabin was nice and a...   \n",
+       "3      155305      1245885  Clean and comfortable room with everything you...   \n",
+       "4      155305      1891395  The cabin was solid for an overnight stay. It ...   \n",
+       "\n",
+       "   compound_scores  \n",
+       "0           0.8830  \n",
+       "1           0.9954  \n",
+       "2           0.9819  \n",
+       "3           0.9775  \n",
+       "4           0.8807  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Preview results\n",
     "reviews_df.head()"
@@ -1107,10 +1197,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "ce6c9ac0-3ff1-45d5-b25a-3a2a032ee909",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    331653.000000\n",
+       "mean          0.853374\n",
+       "std           0.197392\n",
+       "min          -0.993900\n",
+       "25%           0.826800\n",
+       "50%           0.922600\n",
+       "75%           0.963400\n",
+       "max           0.999700\n",
+       "Name: compound_scores, dtype: float64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# View statistical distribution of compound scores\n",
     "reviews_df['compound_scores'].describe()"
