data understanding edits

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -61,9 +61,9 @@
    "id": "98fe0286-04e4-468e-976e-e7d5281900ea",
    "metadata": {},
    "source": [
-    "The [data](https://insideairbnb.com/get-the-data/) has been extracted from Airbnb. Two datasets were used in this project:\n",
-    "1. listings.csv.gz: 3031 entries of unique listings. Each listing includes detailed information, including host information, price, availability, rooms, and reviews. This dataset will be trimmed to include only what will be listed in the recommendations.\n",
-    "2. reviews.csv.gz: 331718 entries of unique reviews. This dataset includes the following columns - listing_id, id, date, reviewer_id, reviewer_name, comments. The reviews are listed as comments, not numerical ratings. "
+    "The [data](https://insideairbnb.com/get-the-data/) has been extracted from Airbnb. This data includes information on Asheville, NC listings and was **last updated on June 21, 2024**. Two datasets were used in this project:\n",
+    "1. listings.csv.gz: **3031 entries of unique listings**. Each listing includes detailed information, including host information, price, availability, rooms, and reviews. This dataset will be trimmed to include only what will be listed in the recommendations.\n",
+    "2. reviews.csv.gz: **331718 entries of unique reviews**. This dataset includes the following columns - listing_id, id, date, reviewer_id, reviewer_name, comments. The reviews are listed as comments, not numerical ratings. "
    ]
   },
   {
@@ -1428,14 +1428,6 @@
    "source": [
     "The distribution of compound scores is **skewed left**. It appears that the majority of the reviews have a positive sentiment. One can infer from this that people are **more likely to leave a listing review if they have a very positive experience**. The minimum score is -0.99 and the maximum score is 0.99. The bulk of the scores fall between 0.82 and 0.96. The **mean of 0.85** and **median of 0.92** are fairly similar, depicting that both are fairly accurate measures of central tendency. "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d43e843e-776b-4f00-a327-4e9c438bdf76",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
