train test split for Modeling

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "id": "be3aae36-20d4-4f6c-981c-da33b44eb611",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,9 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
     "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\n",
+    "from surprise import Reader, Dataset\n",
     "from surprise.model_selection import cross_validate\n",
+    "from surprise.model_selection import train_test_split\n",
     "from surprise.prediction_algorithms import SVD\n",
     "from surprise.prediction_algorithms import KNNWithMeans, KNNBasic, KNNBaseline\n",
     "from surprise.model_selection import GridSearchCV"
@@ -551,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "id": "3d999cad-e205-4a62-ac9d-b7bce7592a1a",
    "metadata": {},
    "outputs": [],
@@ -561,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "id": "51942dff-e8ae-4890-9e87-331b67e57d79",
    "metadata": {},
    "outputs": [
@@ -579,7 +581,7 @@
        "Name: price, dtype: float64"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "id": "ae4a43b4-442c-4f60-9be7-d393153f9932",
    "metadata": {},
    "outputs": [
@@ -626,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "a5050b3a-d015-47b5-a1ee-ab7f9b08d742",
    "metadata": {},
    "outputs": [
@@ -725,7 +727,7 @@
        "4  The cabin was solid for an overnight stay. It ...  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "8ea5c9fc-2243-4f3e-a213-f8fe4dae2935",
    "metadata": {},
    "outputs": [
@@ -748,7 +750,7 @@
        "\"Place was great! Can't really speak to the inside as we only went inside to check in, but looked nice and friendly. We stayed in the cabin in the back and it was lovely. Private and cute, user-friendly. Hot tub was also really good. Spoke with other guests who were all really friendly and interesting people. Great area of town - easy walk to pizza, bars, shops, and coffee. Really loved staying here. \\r<br/>Suggestion: Bring an extra towel, plates or something to use if you're eating in (there's a small kitchen). Maybe another fan if it's really hot. Bed is not really that comfortable if you're really tall. Thanks!!\""
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -760,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "aca9d745-df56-4cae-ac7f-66b92402e467",
    "metadata": {},
    "outputs": [
@@ -791,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "7f5f5d69-fdf3-4dee-b500-1a6b5e24ce5b",
    "metadata": {},
    "outputs": [
@@ -812,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "46c5184a-8e5a-4220-9cdf-3df050147f87",
    "metadata": {},
    "outputs": [
@@ -834,7 +836,7 @@
        "Name: count, Length: 295659, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -889,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "ccb3b5a3-a88a-4190-a61c-d4ad6c0bf080",
    "metadata": {},
    "outputs": [],
@@ -901,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "bd34e7d4-f246-4678-a40e-c028fa0e1df0",
    "metadata": {},
    "outputs": [
@@ -964,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "c44783e2-d7f3-4f22-a9c7-3735d7b67471",
    "metadata": {},
    "outputs": [
@@ -975,7 +977,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -987,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "8c72e4c9-135a-4937-8540-cc7b0575842a",
    "metadata": {},
    "outputs": [
@@ -1155,7 +1157,7 @@
        "[65 rows x 6 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1175,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "f03bdd2c-6809-4465-b8ab-c7cdd14292a3",
    "metadata": {},
    "outputs": [],
@@ -1186,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "272a6ec8-69ff-4c78-b294-21827a5481c8",
    "metadata": {},
    "outputs": [],
@@ -1197,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "b060b6d5-278b-49f1-9c55-00d8babe0fc0",
    "metadata": {},
    "outputs": [
@@ -1206,7 +1208,7 @@
      "evalue": "invalid syntax (2500307406.py, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[18], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    airbnb_data = pd.concat([recommender_cols_df, reviews_df], axis=1, keys=)\u001b[0m\n\u001b[0m                                                                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  Cell \u001b[0;32mIn[21], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    airbnb_data = pd.concat([recommender_cols_df, reviews_df], axis=1, keys=)\u001b[0m\n\u001b[0m                                                                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -1244,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "9e7c4c02-3bf4-412c-9146-dc8d0cb8e8fb",
    "metadata": {},
    "outputs": [],
@@ -1258,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "2f68509f-da66-4c3b-867e-54f6328139bf",
    "metadata": {},
    "outputs": [
@@ -1345,7 +1347,7 @@
        "4           0.8807  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1357,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "ce6c9ac0-3ff1-45d5-b25a-3a2a032ee909",
    "metadata": {},
    "outputs": [
@@ -1375,7 +1377,7 @@
        "Name: compound_scores, dtype: float64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1395,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "259012a8-9250-4d46-80a6-2e4d836378af",
    "metadata": {},
    "outputs": [
@@ -1447,10 +1449,36 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a527a781-1ac7-4127-9897-0b7a69eeb659",
+   "id": "ebf029f7-0fa1-49a1-a2b6-1a79fdef484e",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "e67a6667-f432-4c94-b7ab-0e13e12b1ba4",
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "###TRAIN TEST SPLIT FIRST"
+    "# Instatiate reader\n",
+    "reader = Reader(line_format='item user rating', rating_scale=(-1,1))\n",
+    "\n",
+    "# Drop comments column from `reviews_df`\n",
+    "reviews_df.drop('comments', axis=1, inplace=True)\n",
+    "\n",
+    "# Use reader to load `reviews_df`\n",
+    "reviews = Dataset.load_from_df(reviews_df,reader)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "67205686-d17b-46bd-abe5-8ccc01aef77d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split data into trainset and testset\n",
+    "trainset, testset = train_test_split(reviews, random_state=28)"
    ]
   },
   {
