first next step

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1441,14 +1441,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "839be8ff-2f18-44e7-84b5-558f481b98a2",
-   "metadata": {},
-   "source": [
-    "## Baseline Model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "ebf029f7-0fa1-49a1-a2b6-1a79fdef484e",
    "metadata": {},
    "source": []
@@ -1479,6 +1471,22 @@
    "source": [
     "# Split data into trainset and testset\n",
     "trainset, testset = train_test_split(reviews, random_state=28)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9571bdc-7db3-4a98-89e9-51b337ddfc9c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "839be8ff-2f18-44e7-84b5-558f481b98a2",
+   "metadata": {},
+   "source": [
+    "## Baseline Model"
    ]
   },
   {
@@ -1570,6 +1578,16 @@
    "cell_type": "markdown",
    "id": "ec3716ea-7893-4bf9-8431-aa5558a1295a",
    "metadata": {},
+   "source": [
+    "1. **Expand recommender system**: Initially, this recommender system should be sampled in a few more selected cities to test the efficacy and usefulness of the feature. It should then be expanded to include all cities in one recommender system. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4be8f5a4-4bac-4e1c-9eb8-f14e093c855e",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
