clean up library imports

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "id": "be3aae36-20d4-4f6c-981c-da33b44eb611",
    "metadata": {},
    "outputs": [],
@@ -88,11 +88,8 @@
     "from sklearn.model_selection import train_test_split\n",
     "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\n",
     "from surprise import Reader, Dataset\n",
-    "from surprise.model_selection import cross_validate\n",
-    "from surprise.model_selection import train_test_split\n",
-    "from surprise.prediction_algorithms import SVD\n",
-    "from surprise.prediction_algorithms import KNNWithMeans, KNNBasic, KNNBaseline\n",
-    "from surprise.model_selection import GridSearchCV"
+    "from surprise.model_selection import cross_validate, train_test_split, GridSearchCV\n",
+    "from surprise.prediction_algorithms import KNNWithMeans, KNNBasic, KNNBaseline, SVD"
    ]
   },
   {
@@ -1443,7 +1440,9 @@
    "cell_type": "markdown",
    "id": "ebf029f7-0fa1-49a1-a2b6-1a79fdef484e",
    "metadata": {},
-   "source": []
+   "source": [
+    "I will use the `surprise` library to build the recommender system. This will entail loading `reviews_df` into a suitable format to use with `surprise`. I split the data into a trainset and testset. "
+   ]
   },
   {
    "cell_type": "code",
@@ -1474,14 +1473,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a9571bdc-7db3-4a98-89e9-51b337ddfc9c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "839be8ff-2f18-44e7-84b5-558f481b98a2",
    "metadata": {},
@@ -1491,13 +1482,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "b5c616e9-02e3-4c8c-96b2-36960f70750d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'Trainset' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[31], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m baseline_model \u001b[38;5;241m=\u001b[39m KNNBasic()\n\u001b[1;32m      3\u001b[0m baseline_model\u001b[38;5;241m.\u001b[39mfit(trainset)\n\u001b[0;32m----> 4\u001b[0m baseline_predictions \u001b[38;5;241m=\u001b[39m baseline_model\u001b[38;5;241m.\u001b[39mtest(trainset)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(predictions)\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(accuracy\u001b[38;5;241m.\u001b[39mrmse(predictions))\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/surprise/prediction_algorithms/algo_base.py:160\u001b[0m, in \u001b[0;36mAlgoBase.test\u001b[0;34m(self, testset, verbose)\u001b[0m\n\u001b[1;32m    142\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Test the algorithm on given testset, i.e. estimate all the ratings\u001b[39;00m\n\u001b[1;32m    143\u001b[0m \u001b[38;5;124;03min the given testset.\u001b[39;00m\n\u001b[1;32m    144\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    156\u001b[0m \u001b[38;5;124;03m    that contains all the estimated ratings.\u001b[39;00m\n\u001b[1;32m    157\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    159\u001b[0m \u001b[38;5;66;03m# The ratings are translated back to their original scale.\u001b[39;00m\n\u001b[0;32m--> 160\u001b[0m predictions \u001b[38;5;241m=\u001b[39m [\n\u001b[1;32m    161\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpredict(uid, iid, r_ui_trans, verbose\u001b[38;5;241m=\u001b[39mverbose)\n\u001b[1;32m    162\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m (uid, iid, r_ui_trans) \u001b[38;5;129;01min\u001b[39;00m testset\n\u001b[1;32m    163\u001b[0m ]\n\u001b[1;32m    164\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m predictions\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'Trainset' object is not iterable"
+     ]
+    }
+   ],
    "source": [
     "# Instantiate baseline SVD model\n",
-    "baseline_model = knnBasic()\n"
+    "baseline_model = KNNBasic()\n",
+    "baseline_model.fit(trainset)\n",
+    "baseline_predictions = baseline_model.test(trainset)\n",
+    "print(predictions)\n",
+    "print(accuracy.rmse(predictions))"
    ]
   },
   {
