--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "id": "be3aae36-20d4-4f6c-981c-da33b44eb611",
    "metadata": {},
    "outputs": [],
@@ -1196,29 +1196,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "b060b6d5-278b-49f1-9c55-00d8babe0fc0",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2500307406.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[21], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    airbnb_data = pd.concat([recommender_cols_df, reviews_df], axis=1, keys=)\u001b[0m\n\u001b[0m                                                                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Merge the two datasets on `id` and `listing_id`\n",
-    "airbnb_data = pd.concat([recommender_cols_df, reviews_df], axis=1, keys=)\n",
-    "\n",
-    "# Preview merged dataset\n",
-    "airbnb_data.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "132b4cc0-3aad-4ac4-80de-376639c0d9b9",
    "metadata": {},
@@ -1243,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "9e7c4c02-3bf4-412c-9146-dc8d0cb8e8fb",
    "metadata": {},
    "outputs": [],
@@ -1257,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "2f68509f-da66-4c3b-867e-54f6328139bf",
    "metadata": {},
    "outputs": [
@@ -1344,7 +1321,7 @@
        "4           0.8807  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1356,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "ce6c9ac0-3ff1-45d5-b25a-3a2a032ee909",
    "metadata": {},
    "outputs": [
@@ -1374,7 +1351,7 @@
        "Name: compound_scores, dtype: float64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1385,16 +1362,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "c72135bc-7079-4a12-81e8-05b8cc8f5db4",
-   "metadata": {},
-   "source": [
-    "#Include overview of statistical distribution"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "259012a8-9250-4d46-80a6-2e4d836378af",
    "metadata": {},
    "outputs": [
@@ -1446,30 +1415,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "id": "a66ee3ac-1f43-4ea4-b3d5-518299c1e2f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drop comments column from `reviews_df`\n",
+    "# reviews_df.drop('comments', axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 26,
    "id": "e67a6667-f432-4c94-b7ab-0e13e12b1ba4",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Instatiate reader\n",
-    "reader = Reader(line_format='item user rating', rating_scale=(-1,1))\n",
-    "\n",
-    "# Drop comments column from `reviews_df`\n",
-    "reviews_df.drop('comments', axis=1, inplace=True)\n",
+    "reader = Reader(rating_scale=(-1,1))\n",
     "\n",
     "# Use reader to load `reviews_df`\n",
-    "reviews = Dataset.load_from_df(reviews_df,reader)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "67205686-d17b-46bd-abe5-8ccc01aef77d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Split data into trainset and testset\n",
-    "trainset, testset = train_test_split(reviews, random_state=28)"
+    "reviews = Dataset.load_from_df(reviews_df[['reviewer_id', 'listing_id', 'compound_scores']],reader)"
    ]
   },
   {
@@ -1482,38 +1448,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "b5c616e9-02e3-4c8c-96b2-36960f70750d",
+   "execution_count": 27,
+   "id": "efed8a1a-8233-4ae6-914e-afc19c10bd20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instantiate baseline SVD model\n",
+    "baseline_model = SVD()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "deebdd74-d9a9-425e-adb5-febc8abbf12c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Computing the msd similarity matrix...\n",
-      "Done computing similarity matrix.\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'Trainset' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[31], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m baseline_model \u001b[38;5;241m=\u001b[39m KNNBasic()\n\u001b[1;32m      3\u001b[0m baseline_model\u001b[38;5;241m.\u001b[39mfit(trainset)\n\u001b[0;32m----> 4\u001b[0m baseline_predictions \u001b[38;5;241m=\u001b[39m baseline_model\u001b[38;5;241m.\u001b[39mtest(trainset)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(predictions)\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(accuracy\u001b[38;5;241m.\u001b[39mrmse(predictions))\n",
-      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/surprise/prediction_algorithms/algo_base.py:160\u001b[0m, in \u001b[0;36mAlgoBase.test\u001b[0;34m(self, testset, verbose)\u001b[0m\n\u001b[1;32m    142\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Test the algorithm on given testset, i.e. estimate all the ratings\u001b[39;00m\n\u001b[1;32m    143\u001b[0m \u001b[38;5;124;03min the given testset.\u001b[39;00m\n\u001b[1;32m    144\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    156\u001b[0m \u001b[38;5;124;03m    that contains all the estimated ratings.\u001b[39;00m\n\u001b[1;32m    157\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    159\u001b[0m \u001b[38;5;66;03m# The ratings are translated back to their original scale.\u001b[39;00m\n\u001b[0;32m--> 160\u001b[0m predictions \u001b[38;5;241m=\u001b[39m [\n\u001b[1;32m    161\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpredict(uid, iid, r_ui_trans, verbose\u001b[38;5;241m=\u001b[39mverbose)\n\u001b[1;32m    162\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m (uid, iid, r_ui_trans) \u001b[38;5;129;01min\u001b[39;00m testset\n\u001b[1;32m    163\u001b[0m ]\n\u001b[1;32m    164\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m predictions\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'Trainset' object is not iterable"
+      "Evaluating RMSE, MAE of algorithm SVD on 5 split(s).\n",
+      "\n",
+      "                  Fold 1  Fold 2  Fold 3  Fold 4  Fold 5  Mean    Std     \n",
+      "RMSE (testset)    0.1947  0.1921  0.1964  0.1966  0.1928  0.1945  0.0018  \n",
+      "MAE (testset)     0.1211  0.1207  0.1219  0.1218  0.1211  0.1213  0.0005  \n",
+      "Fit time          2.29    2.22    2.40    2.72    2.45    2.42    0.17    \n",
+      "Test time         0.21    0.13    0.14    0.15    0.26    0.18    0.05    \n"
      ]
     }
    ],
    "source": [
-    "# Instantiate baseline SVD model\n",
-    "baseline_model = KNNBasic()\n",
-    "baseline_model.fit(trainset)\n",
-    "baseline_predictions = baseline_model.test(trainset)\n",
-    "print(predictions)\n",
-    "print(accuracy.rmse(predictions))"
+    "cv_baseline = cross_validate(baseline_model, reviews, cv=5, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b9f32d1-65b1-46ff-bcc0-3b595ba88884",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b99adfd-2e93-4a90-9be4-14e4a2ef1b40",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dbedfd5f-8a0a-4e07-82d7-16573ab11d50",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f728a60c-3e74-49e5-ab35-3c6672cfb494",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('Mean RMSE:', np.mean(cv_baseline['test_rmse']))"
    ]
   },
   {
@@ -1595,7 +1594,8 @@
    "id": "ec3716ea-7893-4bf9-8431-aa5558a1295a",
    "metadata": {},
    "source": [
-    "1. **Expand recommender system**: Initially, this recommender system should be sampled in a few more selected cities to test the efficacy and usefulness of the feature. It should then be expanded to include all cities in one recommender system. "
+    "1. **Expand recommender system**: Initially, this recommender system should be sampled in a few more selected cities to test the efficacy and usefulness of the feature. It should then be expanded to include all cities in one recommender system.\n",
+    "2. **Incorporate additional factors of the listing into the recommendations**:"
    ]
   },
   {
