two iterations with gridsearch

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "id": "be3aae36-20d4-4f6c-981c-da33b44eb611",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
     "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\n",
     "from surprise import Reader, Dataset\n",
     "from surprise.model_selection import cross_validate, train_test_split, GridSearchCV\n",
-    "from surprise.prediction_algorithms import KNNWithMeans, KNNBasic, KNNBaseline, SVD"
+    "from surprise.prediction_algorithms import KNNWithMeans, KNNBasic, KNNBaseline, SVD, NMF"
    ]
   },
   {
@@ -1447,6 +1447,12 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4c75c8a2-3fbc-41bf-aecd-4398b70fda43",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "id": "efed8a1a-8233-4ae6-914e-afc19c10bd20",
@@ -1454,7 +1460,7 @@
    "outputs": [],
    "source": [
     "# Instantiate baseline SVD model\n",
-    "baseline_model = SVD()"
+    "baseline_model = SVD(random_state=28)"
    ]
   },
   {
@@ -1470,10 +1476,10 @@
       "Evaluating RMSE, MAE of algorithm SVD on 5 split(s).\n",
       "\n",
       "                  Fold 1  Fold 2  Fold 3  Fold 4  Fold 5  Mean    Std     \n",
-      "RMSE (testset)    0.1947  0.1921  0.1964  0.1966  0.1928  0.1945  0.0018  \n",
-      "MAE (testset)     0.1211  0.1207  0.1219  0.1218  0.1211  0.1213  0.0005  \n",
-      "Fit time          2.29    2.22    2.40    2.72    2.45    2.42    0.17    \n",
-      "Test time         0.21    0.13    0.14    0.15    0.26    0.18    0.05    \n"
+      "RMSE (testset)    0.1971  0.1945  0.1938  0.1938  0.1938  0.1946  0.0013  \n",
+      "MAE (testset)     0.1220  0.1213  0.1212  0.1215  0.1209  0.1214  0.0004  \n",
+      "Fit time          2.20    2.23    2.48    2.27    2.31    2.30    0.10    \n",
+      "Test time         0.22    0.14    0.13    0.13    0.23    0.17    0.04    \n"
      ]
     }
    ],
@@ -1482,20 +1488,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3b9f32d1-65b1-46ff-bcc0-3b595ba88884",
+   "cell_type": "markdown",
+   "id": "5b1407ee-48c4-4010-9be1-8b6271895c3e",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3b99adfd-2e93-4a90-9be4-14e4a2ef1b40",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The average RMSE for the baseline SVD model is approximately 0.19 with a standard deviation of 0.0018, which indicates that this model is **performing *consistently* well** across all 5 folds. "
+   ]
   },
   {
    "cell_type": "code",
@@ -1504,16 +1502,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f728a60c-3e74-49e5-ab35-3c6672cfb494",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('Mean RMSE:', np.mean(cv_baseline['test_rmse']))"
-   ]
   },
   {
    "cell_type": "markdown",
@@ -1527,7 +1515,149 @@
    "cell_type": "markdown",
    "id": "9cecd05a-6a1d-456d-a930-7f7fe10bdbd5",
    "metadata": {},
+   "source": [
+    "First, I will use `GridSearchCV` to determine the best parameters for the SVD model in attempt to tune a better model than the baseline model. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "10c3fc81-660e-46bc-95d6-d2cae1a8579e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = {'n_factors': [20, 50, 100],\n",
+    "          'n_epochs': [5, 10],\n",
+    "         'reg_all': [0.02, 0.05, 0.1]}\n",
+    "gridsearch_svd = GridSearchCV(SVD, param_grid=params, cv=5)\n",
+    "gridsearch_svd.fit(reviews)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "d72909a8-416b-4f0a-a870-566d17dbc5fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.19338471233012788\n",
+      "{'n_factors': 20, 'n_epochs': 10, 'reg_all': 0.1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# best RMSE score\n",
+    "print(gridsearch_svd.best_score[\"rmse\"])\n",
+    "\n",
+    "# combination of parameters that gave the best RMSE score\n",
+    "print(gridsearch_svd.best_params[\"rmse\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0851c397-9be2-48df-b890-ae0769d6bbb3",
+   "metadata": {},
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "9ca8bd39-084f-440a-af13-461ff5f8a20e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nmf_params = {'n_factors': [10, 15, 20, 50],\n",
+    "          'n_epochs': [5, 10]}\n",
+    "gridsearch_nmf = GridSearchCV(NMF, param_grid=nmf_params, cv=5)\n",
+    "gridsearch_nmf.fit(reviews)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "1e18efc6-370a-45f8-9f11-4c887a6f4864",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.20838977731617186\n",
+      "{'n_factors': 15, 'n_epochs': 10}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# best RMSE score\n",
+    "print(gridsearch_nmf.best_score[\"rmse\"])\n",
+    "\n",
+    "# combination of parameters that gave the best RMSE score\n",
+    "print(gridsearch_nmf.best_params[\"rmse\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9728c357-6675-4ac2-8be2-db29ec34e86f",
+   "metadata": {},
+   "source": [
+    "This model has a worse RMSE than the SVD model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f13997bc-8a9d-444c-8e7d-feb8062b1fbc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3071ad2b-cb23-4732-9bd8-95ddb5d1aadc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0259092b-44cc-431f-bb57-4efed77a66bd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "552fe844-d44a-4e98-9728-47af1525d2e5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a86f0390-e09e-4b0b-bbc7-95abcbdee48b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estimating biases using als...\n"
+     ]
+    }
+   ],
+   "source": [
+    "knn_baseline = KNNBaseline(sim_options={'name':'pearson', 'user_based':True})\n",
+    "cv_knn_baseline = cross_validate(knn_baseline, reviews)"
+   ]
   },
   {
    "cell_type": "markdown",
